deploy/dev/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app.kubernetes.io/name: auth
    app.kubernetes.io/component: auth
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: auth
    app.kubernetes.io/component: auth
  ports:
    - name: http
      port: 8080
      targetPort: http
