deploy/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: campus-test
spec:
  type: ClusterIP
  selector:
    app: campus-test
  ports:
    - name: http
      port: 80
      targetPort: http
